force-app/main/default/objects/Opportunity_Snap__c/Opportunity_Snap__c.object-meta.xml
<CustomObject>
    <description>Object to capture analytic snaphots of open Opportunities</description>
    <label>Opportunity Snap</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Opp Snap ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Snaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>