force-app/main/default/objects/Opportunity_Snap__c/fields/Completed_Calls__c.field-meta.xml
<CustomField>
    <fullName>Completed_Calls__c</fullName>
    <label>Completed Calls</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>