force-app/main/default/objects/Opportunity_Snap__c/fields/Days_since_last_contact__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_contact__c</fullName>
    <label>Days since last contact</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>