force-app/main/default/objects/Opportunity_Snap__c/fields/Market_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Upload_Date__c</fullName>
    <label>Market Upload Date</label>
    <type>Date</type>
</CustomField>