force-app/main/default/objects/Opportunity_Snap__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <label>Opportunity Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>