force-app/main/default/objects/Opportunity_Snap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Close_Date__c</columns>
    <columns>Opportunity_Owner__c</columns>
    <columns>Stage__c</columns>
    <columns>Amount__c</columns>
    <columns>Client_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Days_since_last_contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>